# standalone-agent-scaffold

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  __init__.py  __main__.py  agent.py  cli.py  keeper_client.py  onboard.py  pyproject.toml  workshop.py
.github/workflows/: ci.yml
tests/: test_agent.py
