[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "standalone-agent-scaffold"
version = "0.1.0"
description = "Core standalone CLI agent scaffold for the Pelagic AI fleet — the base every SuperInstance agent inherits from."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pelagic Fleet Engineering", email = "fleet@pelagic.ai" },
]
keywords = ["agent", "fleet", "pelagic", "superinstance", "standalone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pelagic-agent = "cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
